--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "typescript": "^4.1.5"
+  },
+  "devDependencies": {
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
